--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles/light.css" id="theme-link">
 </head>
 <body>
-<a href = "coffepedia.html">
+<a href = "index.html">
     <header>
     <h1>C  O  F  F  E  E  P  E  D  I  A . R  U</h1>
     </header>
